Restructured files, minor fixes and changes

--- a/area.html
+++ b/area.html
@@ -12,8 +12,8 @@
             Fun With Triangles
         </p>
         <ul class="links">
-            <li><a href="triangle-quiz.html">Triangle Quiz</a></li>
-            <li><a href="is-this-a-traingle.html">Is this a Triangle?</a></li>
+            <li><a href="index.html">Triangle Quiz</a></li>
+            <li><a href="is-this-a-triangle.html">Is this a Triangle?</a></li>
             <li><a href="area.html">Find Area</a></li>
             <li><a href="hypoteneuse.html">Find Hypoteneuse</a></li>
         </ul>
