--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="styles.css" rel="stylesheet">
-  <title>Triangle Quiz</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="styles.css" rel="stylesheet">
+    <title>Triangle Quiz</title>
 </head>
+
 <body>
     <nav>
         <p>
@@ -14,7 +16,7 @@
         </p>
         <ul class="links">
             <li><a href="index.html">Triangle Quiz</a></li>
-            <li><a href="is-this-a-traingle.html">Is this a Triangle?</a></li>
+            <li><a href="is-this-a-triangle.html">Is this a Triangle?</a></li>
             <li><a href="area.html">Find Area</a></li>
             <li><a href="hypoteneuse.html">Find Hypoteneuse</a></li>
         </ul>
@@ -23,30 +25,31 @@
     <main class=container>
         <h1>Triangle Trivia!</h1>
         <form class="quiz-form">
-          <section class="questions">
-              <p>What is the third angle in a triangle if two are 45 degrees?</p>
-              <input type="radio" id="90" value="90" name="third-angle">
-              <label for="90">90</label>
-              <input type="radio" id="45" value="45" name="third-angle">
-              <label for="45">45</label>
-              <input type="radio" id="60" value="60" name="third-angle">
-              <label for="60">60</label>
-          </section>
-          <section class="questions">
-              <p>How many right angles can a triangle have?</p>
-              <input type="radio" id="2" value="2" name="right-angle">
-              <label for="2">2</label>
-              <input type="radio" id="1" value="1" name="right-angle">
-              <label for="1">1</label>
-              <input type="radio" id="0" value="0" name="right-angle">
-              <label for="0">0</label>
-          </section>
+            <section class="questions">
+                <p>What is the third angle in a triangle if two are 45 degrees?</p>
+                <input type="radio" id="90" value="90" name="third-angle">
+                <label for="90">90</label>
+                <input type="radio" id="45" value="45" name="third-angle">
+                <label for="45">45</label>
+                <input type="radio" id="60" value="60" name="third-angle">
+                <label for="60">60</label>
+            </section>
+            <section class="questions">
+                <p>How many right angles can a triangle have?</p>
+                <input type="radio" id="2" value="2" name="right-angle">
+                <label for="2">2</label>
+                <input type="radio" id="1" value="1" name="right-angle">
+                <label for="1">1</label>
+                <input type="radio" id="0" value="0" name="right-angle">
+                <label for="0">0</label>
+            </section>
         </form>
         <button id="submit">
             Submit
         </button>
         <p id="result"></p>
     </main>
-  <script src="quiz.js"></script>
+    <script src="quiz.js"></script>
 </body>
+
 </html>
